--- a/.github/workflows/svgoptimization.yml
+++ b/.github/workflows/svgoptimization.yml
@@ -1,28 +1,29 @@
-# This is a basic workflow to help you get started with Actions
+# .github/workflows/optimize.yml
 
 name: SVG Optimization
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+# The minimum required permissions
+permissions:
+  contents: write
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   svgs:
     name: SVGs
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      # Uncomment the next 2 lines to select a branch for schedule or dispatch.
-      #   with:
-      #     ref: main
-      - uses: ericcornelissen/svgo-action@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Optimize SVGs
+        uses: ericcornelissen/svgo-action@v3
+        id: svgo
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{secrets.GITHUB_TOKEN}}
+      - name: Commit optimizations
+        uses: stefanzweifel/git-auto-commit-action@v4
+        if: ${{steps.svgo.outputs.DID_OPTIMIZE}}
+        with:
+          commit_message: Optimized ${{steps.svgo.outputs.OPTIMIZED_COUNT}} SVG(s).
